Added final coq proofs

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = language.v blockchain.v semantics.v tests.v factorial.v multisig.v
+COQMF_VFILES = language.v blockchain.v semantics.v tests.v factorial.v multisig.v transfer_1tez.v auction.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_ML4FILES = 
